--- a/module-9/Vo_EX6.html
+++ b/module-9/Vo_EX6.html
@@ -88,6 +88,6 @@
         </div>
         <div class="footer">
             <p>Copyright <span>&copy;</span>2023 - Vo</p>
-            <a href=”index.html”>Back to Landing page</a>
+            <a href="index.html">Back to Landing page</a>
         </div>
     </body>
