--- a/module-7/Vo_Mod7_2.html
+++ b/module-7/Vo_Mod7_2.html
@@ -29,6 +29,6 @@
         </div>
         </div>
         <div class="footer">
-            <p><a href=”index.html”>Back to Landing page</a></p>
+            <p><a href="index.html">Back to Landing page</a></p>
         </div>
     </body>
