--- a/module-4/VO_EX3.HTML
+++ b/module-4/VO_EX3.HTML
@@ -1,4 +1,4 @@
-<a href=”index.html”></a>
+<a href="index.html"></a>
 <!DOCTYPE html>
 <html lang="en"> 
 
@@ -6,7 +6,7 @@
         <link href="VO_EX3.CSS" type="text/css" rel="stylesheet"/>
 
         <H1>Assignment 4.3: Build a Web Page Exercise - Part 3</H1>
-        <div id=”container”>
+        <div id="container">
         <div class="boxes">
 
             <div class="leftbox">
@@ -40,6 +40,6 @@
                 <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwigkuyMqOL8AhUQxJYKHXBcBkIYABAAGgJ0bA&ohost=www.google.com&cid=CAESbeD2Q3OvUZVUHVNSuULTuTETk9K8rhAvYP1nAaO_rI5hWbq8YEkDWyUUGi1JmlrMOtOZpziTXqd6ccl_bWm8eE0MNYrEkEolLW9-GmPp1xZlJ6wxJ-3Xn_AyhMf_a_10CgjD3VFItc85nTwK4B0&sig=AOD64_2eoDl8rDpk3qPKoULVKUYfltVGbQ&q&adurl&ved=2ahUKEwi5y-SMqOL8AhXQ1GEKHTcfAKUQ0Qx6BAgJEAE&nis=2" target="_blank">Skip this page</a>
             </div>
             <div class="last">
-            <a href=”index.html”>Back to Landing</a>
+            <a href="index.html">Back to Landing</a>
             </div>
         </div>
