--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <li><a href="vo_EX2.html">Assignment 3.2</a></li>
             <li><a href="index.html">Assignment 4.2</a></li>
             <li><a href="VO_EX4.html">Assignment 5.2</a></li>
-
+            <li><a href="Vo_Mod7_2.html">Assignment 7.2</a></li>
+            <li><a href="Vo_EX6.html">Assignment 9.2</a></li>
+            <li><a href="Assignment11.2.html">Assignment 11.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
