--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <li><a href="Vo_Mod7_2.html">Assignment 7.2</a></li>
             <li><a href="Vo_EX6.html">Assignment 9.2</a></li>
             <li><a href="Assignment11.2.html">Assignment 11.2</a></li>
+            <li><a href="vo_final.html">Final Landing Page</a></li>
+
         </ul>
         <h3>Projects</h3>
         <ul>
